2004-01-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/paper*.ly: remove files. 
	
	* scm/paper.scm (set-staff-size): new function: set default
	staff-size.

	* scripts/convert-ly.py (conv): add conversion rule.

	* lily/music-output-def.cc (LY_DEFINE): ly_output_def_scope: new
	function.

	* scm/paper.scm: new file.
	(set-staff-size): new function 
	(set-paper-size): new function

	* lily/parser.yy (music_output_def_body): restructure definition,
	so first Scheme statement in \paper also happens in new scope. 

	* lily/system.cc (post_processing): move uniquify_list () to
	dumping molecule stage.

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): set
	barCheckSynchronize to #f. Warning: this will mess up scores that
	use barchecks to shorten measures.

	* mf/feta-bolletjes.mf (overdone_heads): make note heads rounder
	at 20pt too.

	* Documentation/user/tutorial.itely (Printing lyrics): document
	\lyricsto

	* lily/my-lily-lexer.cc: \newaddlyrics -> \lyricsto

	* Documentation/user/refman.itely (Fermatas): document \lyricsto

	* lily/new-lyric-combine-music-iterator.cc (process): don't crash
	if Voice is not found.

	* VERSION: release 2.1.10
	
	* input/{test,regression}/: remove old-relative 

	* lily/lexer.ll: add empty markup signature. 

	* scm/new-markup.scm (markup-functions-and-signatures): reinstate
	strut markup

	* lily/parser.yy (markup): MARKUP_HEAD_EMPTY

	* scm/define-translator-properties.scm: update melismata property
	doco.

	* lily/system.cc (output_lines): revert uniquify_list() patch,
	strange side effects seen.
	
	* lily/line-spanner.cc (dashed_line_molecule): return nothing if
	dash-period < 0.

	* scm/midi.scm (instrument-equalizer-alist): fix equalizer setting
	for flute. 

2004-01-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/*.ly: use newaddlyrics iso. addlyrics

	* input/regression/lyrics-multi-stanza.ly (texidoc): remove file.

	* lily/lyric-extender.cc (brew_molecule): behave decently in case
	of line breaks.